<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleNowFr Démos</string>
    
    <!--  MAIN -->
    <string name="main_title">Démonstrations de code par GoogleNow.fr</string>
    <string name="main_intro">"Cette application est une démonstration de code utilisable pour intégrer des applications à Google Now.\r\n\r\nPour tester, il vous suffit d'effectuer les commandes vocales suivantes :\r\n- Ecouter XXX.\r\n- Note à moi-même XXX.\r\n- Recherche XXX sur [nom de l'application]."</string>
    <string name="main_subtitle">Liens</string>
    
    <string name="action_settings">Préférences</string>

    <string name="links_name_github">Sources sur GitHub</string>
    <string name="links_name_gnow">GoogleNow.fr</string>
    <string name="links_url_github">https://github.com/BapNesS/Android-GoogleNowFrDemos</string>
    <string name="links_url_gnow">http://www.googlenow.fr/</string>
        
    <!-- Music -->
    
    <string name="music_title">Ecouter</string>
    <string name="music_query">[%s]</string>
        
    <!-- Note -->
    
    <string name="note_title">Note à moi-même</string>
    <string name="note_query">[%s]</string>
        
    <!-- SearchAction -->
    
    <string name="searchaction_title">Action de recherche</string>
    <string name="searchaction_query">[%s]</string>
    
</resources>
